--- a/.github/workflows/send_email_notification.yml
+++ b/.github/workflows/send_email_notification.yml
@@ -1,45 +1,50 @@
 # Nome do workflow que aparecerá na aba "Actions" do seu repositório
-name: Envio Diário do Relatório de Vencimentos
+name: Envio Diário de Notificações de Ações Atrasadas
 
 on:
   schedule:
-    # Executa todos os dias às 11:00 UTC (08:00 no Horário de Brasília).
-    - cron: '0 09 * * *'
+    # Executa todos os dias às 09:00 UTC (06:00 no Horário de Brasília).
+    # Ajuste o horário conforme sua necessidade.
+    - cron: '0 9 * * *'
   
   # Permite a execução manual pela interface do GitHub
   workflow_dispatch:
 
 jobs:
   run-python-script:
+    # Executa em uma máquina virtual Linux (Ubuntu) mais recente
     runs-on: ubuntu-latest
     
     steps:
-      # 1. Baixa o código do seu repositório
+      # 1. Baixa o código do seu repositório para a máquina virtual
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Configura o ambiente Python
+      # 2. Configura o ambiente Python na versão especificada
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.11' # Mantém a versão do Python consistente
 
-      # 3. Instala as dependências do projeto
+      # 3. Instala as dependências do projeto a partir do requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # 4. Executa o script de notificação
+      # 4. Executa o script de notificação a partir de sua nova localização
       - name: Run email notifier script
         # Define as variáveis de ambiente que o script Python vai ler
+        # Estes valores vêm dos "Secrets" configurados no seu repositório GitHub
         env:
-          # Credenciais para o Google Sheets (ainda necessárias)
+          # Credenciais para acessar Google Sheets e Google Drive
           GCP_SERVICE_ACCOUNT_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
           
           # Credenciais para o envio de e-mail via SMTP
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
-          RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
           SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
+          RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }} # E-mail(s) do(s) administrador(es)
           
-        run: python email_notifier.py
+        # --- ATUALIZAÇÃO PRINCIPAL AQUI ---
+        # Executa o script a partir de sua nova pasta.
+        run: python .github/scripts/email_notifier.py
