--- a/.github/workflows/send_email_notification.yml
+++ b/.github/workflows/send_email_notification.yml
@@ -35,7 +35,7 @@ jobs:
       # 4. Executa o script de notificação a partir de sua nova localização
       - name: Run email notifier script
         env:
-          # Credenciais para acessar Google Sheets e Google Drive
+          # Credenciais para acessar Google Sheets
           GCP_SERVICE_ACCOUNT_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_CREDENTIALS }}
           
           # Credenciais para o envio de e-mail via SMTP
@@ -43,8 +43,8 @@ jobs:
           SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
           RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
 
-          # --- ADIÇÃO IMPORTANTE AQUI ---
-          # ID da planilha a ser lido pelo gdrive/config.py
+          # --- ADIÇÃO ESSENCIAL AQUI ---
+          # Passa o ID da planilha como variável de ambiente
           MATRIX_SPREADSHEET_ID: ${{ secrets.MATRIX_SPREADSHEET_ID }}
           
         run: python .github/scripts/email_notifier.py
