--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,9 @@ plotly>=5.18.0
 pandas
 openpyxl==3.1.2
 authlib
-google-auth
-google-auth-httplib2
-google-auth-oauthlib
-google-api-python-client
+
 python-dotenv==1.0.1
 google-generativeai>=0.3.2
-pygsheets>=2.0.6
-oauth2client
-gspread
 python-dateutil
 pyyaml
 streamlit-option-menu
@@ -21,3 +15,9 @@ python-Levenshtein
 msal
 streamlit-javascript
 streamlit_lottie
+
+supabase>=2.3.0
+postgrest>=0.10.0
+storage3>=0.5.0
+psycopg2-binary>=2.9.0
+sqlalchemy>=2.0.0
