feat: Usa Service Role Key para operações de storage

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -6,3 +6,4 @@ connection_string = "postgresql://postgres:[YOUR-PASSWORD]@db.qhkfkffkaqihlhcfil
 [supabase]
 url = "https://qhkfkffkaqihlhcfildx.supabase.co"
 key = "sua-anon-key-aqui"
+service_role_key = "eyJhbGc..." # <<< ADICIONE (encontre no Supabase > Settings > API)
