--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,10 @@ postgrest>=0.10.0
 storage3>=0.5.0
 psycopg2-binary>=2.9.0
 sqlalchemy>=2.0.0
+
+# Bibliotecas para processamento de PDFs
+PyPDF2>=3.0.0
+pdfplumber>=0.10.0
+pymupdf>=1.23.0
+pdf2image>=1.16.0
+Pillow>=10.0.0
